retrieved/unpackaged/unpackaged/objects/Member__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Books_Issued__c</fullName>
        <label>Books Issued</label>
        <summaryFilterItems>
            <field>Book_Issue__c.Return_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Book_Issue__c.Member__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Date_Of_Joining__c</fullName>
        <label>Date Of Joining</label>
        <type>Date</type>
    </fields>
    <label>Member</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Date_Of_Joining__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Member Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>